# DUA

./: .gitignore  .prettierignore  1)update_client.cmd  1)update_server.cmd  2)start_client.cmd  2)start_server.cmd  Install Dependencies.cmd  README.md  Start.cmd  Stop.cmd  docker-compose.yml  file_structure.py  gitignore  start_client.cmd  start_server.cmd
Button_Box/: CMakeLists.txt  README.md
Button_Box/src/: communication.h  main.c  main.h
docs/: communication.md  creating_unit_tests.md
dua_client/: Dockerfile  config.env  index.js  package-lock.json  package.json
dua_client/public/: index.html
dua_client/src/: App.js  apiRoutes.js  index.js  store.js  styles.css
dua_client/src/components/: Agent.js  BD0.js  Breakdown0.js  Development.js  IAV0.js  IAV1.js  IAV10.js  IAV2.js  IAV3.js  IAV4.js  IAV5.js  IAV6.js  IAV7.js  IAV8.js  IAV9.js  ParticipantForm.js  Screen0.js  Screen1.js  Screen10.js  Screen2.js  Screen3.js  Screen4.js  Screen5.js  Screen6.js  Screen7.js  Screen8.js  Screen9.js  SpoofAgent.js  StartTestButton.js  TestDisplay.js  TestInteractables.js  VideoPlayer.js  adminPage.js  displayVideo.js  dualScreen.js  exportDataPage.js  inVehicleAgent.js  mainpage.js  placeHolderPage.js  storageTest.js  (+4 more)
dua_client/src/components/IAV_Components/: IVA_Menu.js  IVA_TripDuration.js  IVA_date.js
dua_client/src/components/hooks/: AxiosHandler.js  DataButton.js  Date.js  Modal.js  ParticipantForm.js  PopOutIframe.js  SendTestButton.js  StartTestButton.js  StartTrialButton.js  TimeDisplay.js  Timer.js  VideoComponent.js  VideoPopOut.js
dua_client/src/controllers/: participantController.js  screenController.js  tapController.js  testController.js  videoWindowController.js
dua_client/src/css/: Breakdown0.module.scss  IVA_Menu.module.scss  IVA_TripDuration.module.scss  Screen0.module.scss  Screen1.module.scss  Screen10.module.scss  Screen2.module.scss  Screen3.module.scss  Screen4.module.scss  Screen5.module.scss  Screen6.module.scss  Screen7.module.scss  Screen8.module.scss  Screen9.module.scss  Trial_1.module.scss  styles.css  utils.scss
dua_client/src/data/: GeneralData.js  TrialData.js
dua_client/src/redux/actions/: participantAction.js  participantActions.js  screenActions.js  tapAction.js  tapActions.js  testActions.js  trialActions.js
dua_client/src/redux/reducers/: participantReducer.js  screenReducer.js  tapReducer.js  testReducer.js  trialReducer.js
dua_client/src/views/: BreakdownButton.js  ButtonBoxGUI.js  DataWrapper.js  DetourButton.js  HomePage.js  ParticipantTable.js  ParticipantWaiting.js  TrialRun.js  TrialSetup.js  TrialVideo.js  TrialWrapper.js
dua_client/src/views/components/: BreakdownButton.js  ColorPicker.js  ConfirmModal.js  DeleteModal.js  DetourButton.js  FunctionButton.js  GeneralModal.js  KeyCodeGetter.js  NavButton.js  ParticipantConfirmForm.js  ParticipantEditForm.js  (+7 more)
dua_server/: Dockerfile  README.md  config.env  package-lock.json  package.json  server.js
dua_server/api/: api.js
dua_server/api/controllers/: participantController  participantController.js  screenController.js  tapController  tapController.js  testController  testController.js
dua_server/api/models/: Participant.js  Screen.js  Tap.js  Test.js
dua_server/config/: database.js
dua_server/configDB/: database.js
dua_server/db/: connect.js  initializer.js  test.db
dua_server/models/: Screen.js  Tap.js  Test.js
dua_server/routes/: getData.js  index.js  insert.js  pollTest.js  test.js  test_data.js  user.js  video.js
(+96 files in other folders)
